--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "amocrm/amocrm-api-library": "^0.3.4"
+        "amocrm/amocrm-api-library": "^0.3.4",
+      "ext-json": "*"
     }
 }
