--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,5 @@
 {
     "require": {
-        "amocrm/amocrm-api-library": "^0.3.4",
-      "ext-curl": "*",
-      "ext-json": "*"
+        "amocrm/amocrm-api-library": "^0.3.5"
     }
 }
